big rewrite, finished phase 0, starting phase 1

--- a/index.html
+++ b/index.html
@@ -1,92 +1,57 @@
-<html>
-<head>
-    <link rel="stylesheet" href="style.css">
-    
-</head>
+<html lang="en">
+	<head>
+		<link rel="stylesheet" href="style.css">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Load Code File</title>
+		<script defer src="script.js"></script>
+	</head>
 
-<body bgcolor="red">
-	<ul id="MainList" style="background-color: lightblue">
-        <div align="center">
-            <h3>Motion</h3>
-            <h4>
-                Definitions... <br>
-                Contestualization... <br>
-            </h4>
-        </div>
-        <div>
-			<input type="text" id="inAssertion" placeholder="Assertion" style="float: left;">
-            <span onclick="newElement()" class="addBtn" style="float: left;">+</span>
-            <input type="text" id="inReasoning" placeholder="Reasoning">
-        </div>
-        <li><di>test<p style="display: none">long texttttttttttttttttttttttttttttt</p></di></li>
-    </ul>
+	<body>
+		<div id="0" class="Argument" align="center">
+			<h3 id="A-0">Assertion</h3>
+			<h4 id="R-0">Reasoning</h4>
+			<ul id="E-0" class="EvidenceList">
+				<li id="E-1-0">Evidence 1</li>
+				<li id="E-2-0">Evidence 2</li>
+				<li id="E-3-0">Evidence 3</li>
+			</ul>
+			<br><br><br>
+			<ul id="-0" class="SubArgumentList">
+				<li id="A-1-0">Assertion 1</li>
+				<li id="A-2-0">Assertion 2</li>
+				<li id="A-3-0">Assertion 3</li>
+			</ul>
+			<br>
+		</div>
+		<div id="content"></div>
+	</body>
 
-    <script>
-        // Create a "close" button and append it to each list item
-        var myNodelist = document.getElementsByTagName("LI");
-        var i;
-        for (i = 0; i < myNodelist.length; i++) {
-            var span = document.createElement("SPAN");
-            var txt = document.createTextNode("\u00D7");
-            span.className = "close";
-            span.appendChild(txt);
-            myNodelist[i].appendChild(span);
-        }
+	<script>
+		document.addEventListener('DOMContentLoaded', () => {
+			const contentDiv = document.getElementById('content');
 
-        // Click on a close button to hide the current list item
-        var close = document.getElementsByClassName("close");
-        var i;
-        for (i = 0; i < close.length; i++) {
-            close[i].onclick = function () {
-                var div = this.parentElement;
-                div.style.display = "none";
-            }
-        }
+			// Fetch the code.txt file
+			fetch('code.txt')
+				.then(response => {
+					if (!response.ok) {
+						throw new Error('Failed to fetch code.txt: ${response.statusText}');
+					}
+					return response.text();
+				})
+				.then(data => {
+					const rows = data.split('\n'); // Split the file content by lines
 
-        // Add a "checked" symbol when clicking on a list item
-        var list = document.querySelector('ul');
-        list.addEventListener('click', function (ev) {
-            if (ev.target.tagName === 'LI') {
-                ev.target.classList.toggle('selected');
-            }
-        }, false);
-		
-		
-		
-		
-		var wage = document.getElementById("inAssertion");
-		wage.addEventListener("keydown", function (e) {
-			if (e.code === "Enter") {  //checks whether the pressed key is "Enter"
-				newElement();
-			}
+					rows.forEach((row, index) => {
+						const p = document.createElement('p');
+						p.id = `line-${index + 1}`; // Assign a unique id
+						p.textContent = row; // Set the text content
+						contentDiv.appendChild(p); // Append to the container
+					});
+				})
+				.catch(error => {
+					console.error('Error loading the code.txt file:', error);
+				});
 		});
-		
-        // Create a new list item when clicking on the "Add" button
-        function newElement() {
-            var li = document.createElement("li");
-            var txtAssertion = document.getElementById("inAssertion").value;
-            var t = document.createTextNode(txtAssertion);
-            li.appendChild(t);
-            if (txtAssertion === '') {
-                alert("You must write something!");
-            } else {
-                document.getElementById("MainList").appendChild(li);
-            }
-            document.getElementById("inAssertion").value = "";
-
-            var span = document.createElement("SPAN");
-            var txt = document.createTextNode("\u00D7");
-            span.className = "close";
-            span.appendChild(txt);
-            li.appendChild(span);
-
-            for (i = 0; i < close.length; i++) {
-                close[i].onclick = function () {
-                    var div = this.parentElement;
-                    div.style.display = "none";
-                }
-            }
-        }
-    </script>
-</body>
+	</script>
 </html>
