--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 	<head>
 		
-		<!--<link rel="stylesheet" href="style.css">-->
+		<link rel="stylesheet" href="style.css">
 		
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,23 +26,23 @@
 		
 		 document.addEventListener('DOMContentLoaded', () => {
 			parent=document.getElementById("graph");
-			showNode('0', parent);
-			expandNode('0');
+			showArg('0', parent);
+			expandArg('0');
         });
 		
-		function showNode(id, parent)
+		function showArg(id, parent)
 		{
 			//Main div
 			const main=document.createElement('div');
 			main.id=id;
-			main.classList.add("Node");
+			main.classList.add("Arg");
 			parent.appendChild(main);
 			
 			//trunk div
 			const trunk=document.createElement('div');
 			trunk.id='T-'+id;
 			trunk.classList.add("Trunk");
-			trunk.onclick=function() { expandNode(trunk.id.slice(2)) };
+			trunk.onclick=function() { expandArg(trunk.id.slice(2)) };
 			main.appendChild(trunk);
 			
 			//Assertion
@@ -52,28 +52,45 @@
 			ass.textContent=primaryText(id);
 			trunk.appendChild(ass);
 			
+			//Secondary elements container
+			const expanded=document.createElement('div');
+			expanded.id='EXP-'+id;
+			expanded.classList.add("Expanded");
+			trunk.appendChild(expanded);
+			
 			//Reasoning
 			const res=document.createElement('p');
 			res.id='R-'+id;
 			res.classList.add("Reasoning");
 			res.textContent=secondaryText(id);
-			res.style.display="none";
-			trunk.appendChild(res);
+			expanded.appendChild(res);
 			
 			//Evidence List
 			const el=document.createElement('ul');
 			el.id='EL-'+id;
 			el.classList.add("EvidenceList");
-			el.style.display="none";
-			trunk.appendChild(el);
+			expanded.appendChild(el);
+			
+			//Button Div
+			const but=document.createElement('div');
+			but.id='B-'+id;
+			but.classList.add("BtnDiv");
+			expanded.appendChild(but);
+			
 			
 			//Add Button Evidence
 			const addE=document.createElement('p');
 			addE.id='AddE-'+id;
 			addE.classList.add("AddBtnEvidence");
 			addE.textContent="+";
-			addE.style.display="none";
-			el.appendChild(addE);
+			but.appendChild(addE);
+			
+			//More Options Button
+			const opt=document.createElement('p');
+			opt.id='OPT-'+id;
+			opt.classList.add("OptBtn");
+			opt.textContent=":";
+			but.appendChild(opt);
 			
 			//SubArgument List
 			const sal=document.createElement('ul');
@@ -86,7 +103,6 @@
 			addA.id='AddA-'+id;
 			addA.classList.add("AddBtnArg");
 			addA.textContent="+";
-			addA.style.display="none";
 			sal.appendChild(addA);
 			
 			IDs=idList();
@@ -94,12 +110,12 @@
 			{
 				if(isParentOf(id, IDs[i]))
 				{
-					showNode(IDs[i], sal);
+					showArg(IDs[i], sal);
 				}
 			}
 		}
 		
-		function expandNode(id)
+		function expandArg(id)
 		{
 			IDs=idList();
 			for(let i=0; i<IDs.length; i++)
@@ -110,10 +126,7 @@
 				else
 					val="none";
 				
-				document.getElementById('R-'+IDs[i]).style.display=val;
-				document.getElementById('EL-'+IDs[i]).style.display=val;
-				document.getElementById('AddE-'+IDs[i]).style.display=val;
-				document.getElementById('AddA-'+IDs[i]).style.display=val;
+				document.getElementById('EXP-'+IDs[i]).style.display=val;
 			}
 		}
 		
