modify assertion and reasoning, added example, problems with textarea

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="it">
 	<head>
 		
 		<link rel="stylesheet" href="style.css">
@@ -22,17 +22,14 @@
 	
 	
     <script id="argument-data" type="text/plain">
-0{Mozione}{Definizioni e contestualizzazione}
-1-0{Assertion 1}{Reasoning 1}
-2-0{Assertion 2}{Reasoning 2}
-3-0{Assertion 3}{Reasoning 3}
-1-1-0{SubAssertion}{Reasoning 4}
+0{La pasta rigata è migliore di quella liscia}{La mozione è limitata alla pasta prodotta industrialmente}
+1-0{La pasta valorizza il condimento}{Le superfici ruvide e irregolari creano più spazi per il deposito del condimento che nelle paste lisce scorrerebbe via. In questo modo ogni elemento ha la maggior quantità possibile di condimento}
+2-0{La pasta rigata si cuoce in maniera irregolare}{Le superfici irregolari della pasta creano aree a distanze diverse dal centro che quindi si cuoceranno a velocità diverse rispetto ad altre aree}
+1-1-0{Il trattenimento del condimento non è esclusivo della pasta rigata}{La pasta liscia laminata al bronzo trattiene il sugo tanto quanto la pasta rigata, grazie a micro-irregolarita}
     </script>
     
     <script id="evidence-data" type="text/plain">
-1E-0{Evidence 1}{Source 1}
-2E-0{Evidence 2}{Source 2}
-3E-0{Evidence 3}{Source 3}
+1E-1-0{Evidence: trust me bro}{Seariously, are you going to disagree?}
     </script>
     
     <script id="comment-data" type="text/plain">
