finished evidence management, starting user autentication

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 	</head>
 
 	<body>
-		<div class="grow-wrap">
-			<textarea spellcheck="false" cols="30" onInput="this.parentNode.dataset.replicatedValue = this.value"></textarea>
-		</div>
+		
+		<a href="/login.html">Log in</a>
 		
 		<div id="graph" align="center"></div>
 		
