continued register, still doesn't work, little gui optimization

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	</head>
 
 	<body>
-		
-		<a href="/login.html">Log in</a>
+		<div id="banner">
+			<a href="/explore.html">Explore</a>
+			<a href="/register.html">Sign up</a>
+			<a href="/login.html">Log in</a>
+		</div>
 		
 		<div id="graph" align="center"></div>
 		
