--- a/register.html
+++ b/register.html
@@ -68,7 +68,7 @@
     const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co';
 	const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo';
 	const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
-
+		
 	async function register() {
 	  const email = document.getElementById('email').value;
 	  const password = document.getElementById('password').value;
@@ -79,7 +79,7 @@
 	  errorDiv.textContent = '';
 
 	  try {
-		// Step 1: Sign up the user
+		// Sign up the user
 		const { data: authData, error: authError } = await supabaseClient.auth.signUp({ email, password });
 		if (authError) {
 		  console.error('Auth error:', authError);
@@ -89,31 +89,37 @@
 		if (!authData?.user?.id) {
 		  throw new Error('User ID is missing after sign-up.');
 		}
+		
+		// Add username
+		const { data, error } = await supabaseClient
+		  .from('User')
+		  .insert([{ user_id: authData.user.id, username: username }]);
 
-		// Step 2: Insert the username into the database
-		const { data: profileData, error: profileError } = await supabaseClient
-		  .from('profiles') // Replace with your actual table name
-		  .insert([
-			{
-			  id: authData.user.id, // Use the user's ID from auth
-			  username: username, // Insert the username
-			},
-		  ]);
-
-		if (profileError) {
-		  console.error('Insert error:', profileError);
-		  throw new Error('Failed to add username to the database: ' + profileError.message);
+		if (error) {
+		  console.error('Error inserting display name:', error);
+		} else {
+		  console.log('Display name inserted successfully:', data);
 		}
-
-		// Success message
-		alert('Registration successful! Please check your email to confirm your account.');
-		console.log('Profile created:', profileData);
-	  } catch (err) {
-		console.error('Registration error:', err);
-		errorDiv.textContent = err.message;
+	  } catch (error) {
+		// Display error message to the user
+		errorDiv.textContent = error.message;
 	  }
-	}
+	  
+	  // auto login
+	  
+	  try {
+		const { data, error } = await supabaseClient.auth.signInWithPassword({ email, password });
 
+        if (error) {
+			throw error;
+       }
+
+       // Redirect or show success message
+       window.location.href = "/profile.html";
+      } catch (error) {
+		errorDiv.textContent = error.message;
+		}
+	}	
   </script>
 </body>
 </html>
