little adjustment to the link

--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
         <button onclick="login()">Login</button>
         <div id="error" class="error"></div>
     </div>
-  	<a href="/register.html">Register<a>
+  	<a href="comtree/register.html">Register<a>
 
     <script>
         // Initialize Supabase client
@@ -85,7 +85,7 @@ Tree
                 }
 
                 // Redirect or show success message
-                window.location.href = "/profile.html";
+                window.location.href = "comtree/profile.html";
             } catch (error) {
                 errorDiv.textContent = error.message;
             }
