--- a/register.html
+++ b/register.html
@@ -115,7 +115,7 @@
        }
 
        // Redirect or show success message
-       window.location.href = "/profile.html";
+       window.location.href = "comtree/profile.html";
       } catch (error) {
 		errorDiv.textContent = error.message;
 		}
