didnt work, trying again

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 	<body>
 		<div id="banner">
-			<a href="./explore.html">Explore</a>
-			<a href="./register.html">Sign up</a>
-			<a href="./login.html">Log in</a>
+			<a href="explore.html">Explore</a>
+			<a href="register.html">Sign up</a>
+			<a href="login.html">Log in</a>
 		</div>
 		
 		<div id="graph" align="center"></div>
