small style adjustments

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<html lang="it">
+<html lang="en">
 	<head>
-		
-		<link rel="stylesheet" href="style.css">
-		
+		<link rel="stylesheet" href="style-general.css">
+		<link rel="stylesheet" href="style-graph.css">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Argument Tree</title>
@@ -10,8 +9,9 @@
 
 	<body>
 		<div id="banner">
+			<a href="index.html" align="center">Main Page</a>
 			<a href="explore.html">Explore</a>
-			<a href="register.html">Sign up</a>
+			<a href="signup.html">Sign up</a>
 			<a href="login.html">Log in</a>
 		</div>
 		
@@ -20,7 +20,6 @@
 	</body>
 
 	<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-
 	<script src="graph.js"></script>
 </html>
 
