--- a/login.html
+++ b/login.html
@@ -1,74 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f3f4f6;
-        }
-        .login-container {
-            background: #fff;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 400px;
-        }
-        .login-container h2 {
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-        .login-container input {
-            width: 100%;
-            padding: 0.8rem;
-            margin-bottom: 1rem;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        .login-container button {
-            width: 100%;
-            padding: 0.8rem;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .login-container button:hover {
-            background-color: #45a049;
-        }
-        .login-container .error {
-            color: red;
-            text-align: center;
-            margin-top: 1rem;
-        }
-    </style>
-</head>
-<body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <input type="text" id="email" placeholder="Email" required>
-        <input type="password" id="password" placeholder="Password" required>
-        <button onclick="login()">Login</button>
-        <div id="error" class="error"></div>
-    </div>
-  	<a href="comtree/register.html">Register<a>
-
+	<head>
+		<link rel="stylesheet" href="style-general.css">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Login</title>
+		<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+	</head>
+	<body>
+		<div id="banner">
+				<a href="index.html" align="center">Main Page</a>
+				<a href="explore.html">Explore</a>
+				<a href="signup.html">Sign up</a>
+				<a href="login.html">Log in</a>
+		</div>
+		
+		<div class="login-container">
+			<h2>Login</h2>
+			<input type="text" id="email" placeholder="Email" required>
+			<input type="password" id="password" placeholder="Password" required>
+			<button onclick="login()">Login</button>
+			<div id="error" class="error"></div>
+		</div>
+</body>
     <script>
         // Initialize Supabase client
         const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co'; // Replace with your Supabase URL
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo'; // Replace with your Supabase Anon Key
         const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
-Tree
         async function login() {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
@@ -85,12 +44,11 @@ Tree
                 }
 
                 // Redirect or show success message
-                window.location.href = "comtree/profile.html";
+                window.location.href = "profile.html";
             } catch (error) {
                 errorDiv.textContent = error.message;
             }
         }
     </script>
-</body>
 </html>
 
