--- a/signup.html
+++ b/signup.html
@@ -1,75 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Register</title>
-  <!-- Load the Supabase library -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f3f4f6;
-    }
-    .register-container {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 400px;
-    }
-    .register-container h2 {
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-    .register-container input {
-      width: 100%;
-      padding: 0.8rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-    .register-container button {
-      width: 100%;
-      padding: 0.8rem;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .register-container button:hover {
-      background-color: #45a049;
-    }
-    .register-container .error {
-      color: red;
-      text-align: center;
-      margin-top: 1rem;
-    }
-  </style>
-</head>
-<body>
-  <div class="register-container">
-    <h2>Register</h2>
-    <input type="username" id="username" placeholder="Username" required>
-    <input type="text" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <button onclick="register()">Register</button>
-    <div id="error" class="error"></div>
-  </div>
-
-  <script>
+	<head>
+		<link rel="stylesheet" href="style-general.css">
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Sign up</title>
+		<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+	</head>
+	<body>
+		<div id="banner">
+			<a href="index.html">Main Page</a>
+			<a href="explore.html">Explore</a>
+			<a href="signup.html">Sign up</a>
+			<a href="login.html">Log in</a>
+		</div>
+		<div class="signup-container">
+			<h2>Sign up</h2>
+			<input type="username" id="username" placeholder="Username" required>
+			<input type="text" id="email" placeholder="Email" required>
+			<input type="password" id="password" placeholder="Password" required>
+			<button onclick="signup()">Sign up</button>
+			<div id="error" class="error"></div>
+		</div>
+	</body>
+	<script>
     const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co';
 	const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo';
 	const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 		
-	async function register() {
+	async function signup() {
 	  const email = document.getElementById('email').value;
 	  const password = document.getElementById('password').value;
 	  const username = document.getElementById('username').value;
@@ -115,11 +74,10 @@
        }
 
        // Redirect or show success message
-       window.location.href = "comtree/profile.html";
+       window.location.href = "profile.html";
       } catch (error) {
 		errorDiv.textContent = error.message;
 		}
 	}	
   </script>
-</body>
 </html>
