I've changed so many things I'm sure I will have too many errors but I must push to test 2

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		}
 		else
 		{
-			
+			alert("Welcome! the site is still under construction, feel free to look around");
 		}
 		
 		async function loadUserProfile() {
