minor changes to the buttons, the transition to the hoster should be complete, added the dynamic linking process, removed profile, specialized index and 404

--- a/login.html
+++ b/login.html
@@ -9,10 +9,10 @@
 	</head>
 	<body>
 		<div id="banner">
-				<a href="index.html" align="center">Main Page</a>
-				<a href="explore.html">Explore</a>
-				<a href="signup.html">Sign up</a>
-				<a href="login.html">Log in</a>
+			<a href="index.html" align="center">Main Page</a>
+			<a href="explore.html">Explore</a>
+			<a href="login.html">Log in</a>
+			<a id="signup" href="signup.html">Sign up</a>
 		</div>
 		
 		<div class="login-container">
