--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
 		<div id="banner">
 			<a href="index.html" align="center">Main Page</a>
 			<a href="explore.html">Explore</a>
-			<a href="signup.html">Sign up</a>
 			<a href="login.html">Log in</a>
+			<a id="signup" href="signup.html">Sign up</a>
 		</div>
 		
 		<div id="graph" align="center"></div>
@@ -25,38 +25,29 @@
 		const pathParts = window.location.pathname.split('/').filter(Boolean);
 		const username = pathParts[0] || "#no-user#";
 		const project = pathParts[1] || "#no-project#";
-
-        alert(username+' '+project);
-        if(username!="#no-user#")
-        {
-			if(project!="#no-project#")
-			{
-				const script = document.createElement('script');
-				script.src = '/src/js/graph.js';
-				script.onload = () => {
-					if (typeof initializeGraph === 'function') {
-						initializeGraph(username, project);
-					}
-				};
-				document.head.appendChild(script);
-			}
-			else
-			{
-				const profileDiv = document.createElement("div");
-				profileDiv.className = "profile";
-
-				const heading = document.createElement("h1");
-				heading.innerHTML = 'Welcome, <span id="username">Loading...</span>';
-
-				profileDiv.appendChild(heading);
-				document.body.appendChild(profileDiv);
-				loadUserProfile();
-			}
+		
+		if(project!="#no-project#")
+		{
+			const script = document.createElement('script');
+			script.src = '/src/js/graph.js';
+			script.onload = () => {
+				if (typeof initializeGraph === 'function') {
+					initializeGraph(username, project);
+				}
+			};
+			document.head.appendChild(script);
 		}
 		else
 		{
-			alert("Welcome! the site is still under construction, feel free to look around");
+			const profileDiv = document.createElement("div");
+			profileDiv.className = "profile";
+			const heading = document.createElement("h1");
+			heading.innerHTML = 'Welcome, <span id="username">Loading...</span>';
+			profileDiv.appendChild(heading);
+			document.body.appendChild(profileDiv);
+			loadUserProfile();
 		}
+	}
 		
 		async function loadUserProfile() {
             try {
