--- a/signup.html
+++ b/signup.html
@@ -9,10 +9,10 @@
 	</head>
 	<body>
 		<div id="banner">
-			<a href="index.html">Main Page</a>
+			<a href="index.html" align="center">Main Page</a>
 			<a href="explore.html">Explore</a>
-			<a href="signup.html">Sign up</a>
 			<a href="login.html">Log in</a>
+			<a id="signup" href="signup.html">Sign up</a>
 		</div>
 		<div class="signup-container">
 			<h2>Sign up</h2>
