--- a/index.html
+++ b/index.html
@@ -60,51 +60,40 @@
 			}
 			else
 			{
-				const profileDiv = document.createElement("div");
-				profileDiv.className = "profile";
-				const heading = document.createElement("h1");
-				heading.innerHTML = 'Welcome, <span id="username">Loading...</span>';
-				profileDiv.appendChild(heading);
-				document.body.appendChild(profileDiv);
-				loadUserProfile();
+				
+				checkUser();
+				const logged=False;
+				if(logged)
+				{
+					const profileDiv = document.createElement("div");
+					profileDiv.className = "profile";
+					const heading = document.createElement("h1");
+					heading.innerHTML = 'Welcome <span id="username">'+username+'</span>';
+					profileDiv.appendChild(heading);
+					document.body.appendChild(profileDiv);
+				}
+				else
+				{						
+					const profileDiv = document.createElement("div");
+					profileDiv.className = "profile";
+					const heading = document.createElement("h1");
+					heading.innerHTML = 'Archive of <span id="username">'+username+'</span>';
+					profileDiv.appendChild(heading);
+					document.body.appendChild(profileDiv);
+				}
 			}	
 		}
 		
-		async function loadUserProfile() {
-            try {
-				
-                // Get the logged-in user's UUID
-                const { data: { user }, error } = await supabaseClient.auth.getUser();
+		async function checkUser() {
+  const { data: { user } } = await supabase.auth.getUser();
 
-                if (error || !user) {
-                    console.error('Error fetching user:', error);
-                    document.getElementById('username').innerText = 'Guest';
-                    return;
-                }
+  if (user) {
+    console.log('User is logged in:', user);
+  } else {
+    console.log('No user logged in');
+  }
+}
 
-                // User UUID
-                const userUuid = user.id;
-
-                // Fetch the username from the related table
-                const { data, error: profileError } = await supabaseClient
-                    .from('User')        // Replace 'profiles' with your table name
-                    .select('username')      // Replace 'username' with the column name for the username
-                    .eq('user_id', userUuid); // Match the user's UUID in the 'user_id' column
-
-                if (profileError || !data || data.length === 0) {
-                    console.error('Error fetching profile:', profileError);
-                    document.getElementById('username').innerText = 'Unknown User';
-                    return;
-                }
-
-                // Display username
-                document.getElementById('username').innerText = data[0].username;
-
-            } catch (err) {
-                console.error('Unexpected error:', err);
-                document.getElementById('username').innerText = 'Error';
-            }
-        } 
     </script>
 </html>
 
