--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
 		}
 		
 		async function checkUser() {
-  const { data: { user } } = await supabase.auth.getUser();
+		const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co'; // Replace with your Supabase URL
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo'; // Replace with your Supabase Anon Key
+        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+		  const { data: { user } } = await supabaseClient.auth.getUser();
 
-  if (user) {
-    console.log('User is logged in:', user);
-  } else {
-    console.log('No user logged in');
-  }
-}
-
-    </script>
-</html>
+		  if (user) {
+			console.log('User is logged in:', user);
+		  } else {
+			console.log('No user logged in');
+		  }
+		}
 
 		</script>
 	</body>
