--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Argument Tree</title>
+		
 	</head>
 
 	<body>
@@ -15,15 +16,7 @@
 			<a id="signup" href="signup.html">Sign up</a>
 		</div>
 		<h3>Welcome here! There is little to see</h3>
-		<script>
-		<html lang="en">
-	<head>
-		<link rel="stylesheet" href="/src/css/style-general.css">
-		<link rel="stylesheet" href="/src/css/style-graph.css">
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Argument Tree</title>
-	</head>
+		
 
 	<body>
 		<div id="banner">
@@ -39,6 +32,7 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 	<script>
+		window.onload = async function() {
 		console.log("Full pathname:", window.location.pathname);
 		const pathParts = window.location.pathname.split('/').filter(Boolean);
 		const username = pathParts[0] || "#no-user#";
@@ -62,7 +56,7 @@
 			{
 				
 				checkUser();
-				const logged=False;
+				const logged=false;
 				if(logged)
 				{
 					const profileDiv = document.createElement("div");
@@ -83,7 +77,7 @@
 				}
 			}	
 		}
-		
+	}
 		async function checkUser() {
 		const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co'; // Replace with your Supabase URL
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo'; // Replace with your Supabase Anon Key
