--- a/404.html
+++ b/404.html
@@ -66,7 +66,7 @@
 					profileDiv.appendChild(heading);
 					document.body.appendChild(profileDiv);
 				}
-				
+				alert(0);
 				getProjects(username).forEach(project=>{
 					const but=document.createElement("a");
 					but.innerHtml=project;
@@ -77,12 +77,13 @@
 		}
 	}
 		async function getProjects(username) {
+			alert(1);
 			const { data: userData, error: userError } = await supabaseClient
 			.from('User')  
 			.select('id')
 			.eq('username', username)
 			.single(); 
-
+			alert(2);
 			if (userError || !userData) {
 				console.error('Error fetching user ID:', userError);
 				return null;
@@ -90,11 +91,16 @@
 
 			const userId = parseInt(userData.id, 10);
 			
-			
+			alert(3);
 			const { data: treeData, error: treeError } = await supabaseClient
 				.from('Tree')
 				.select('name')
-				.eq('user', userId)
+				.eq('user', userId);
+				
+			alert(4);
+			console.log("tree", treeData);
+			alert(5);
+			
 			return treeData;
 		}
 		async function checkUser() {
