--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 					profileDiv.appendChild(heading);
 					document.body.appendChild(profileDiv);
 				}
-				alert(0);
-				getProjects(username).forEach(project=>{
+				const Projects=getProjects(username)
+				Projects.forEach(project=>{
 					const but=document.createElement("a");
 					but.innerHtml=project;
 					but.href="/"+username+"/"+project;
@@ -77,7 +77,11 @@
 		}
 	}
 		async function getProjects(username) {
-			alert(1);
+			
+		const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co'; // Replace with your Supabase URL
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo'; // Replace with your Supabase Anon Key
+        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+        
 			const { data: userData, error: userError } = await supabaseClient
 			.from('User')  
 			.select('id')
